--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_MONGO_URI=<your-mongodb-uri>
+VITE_MONGO_URI=mongodb+srv://nalandashihan:123@supermarket-erp.vms30.mongodb.net/?retryWrites=true&w=majority&appName=supermarket-erp
